Fix #106292: adjust last action dismissed after rotating view

As of [0] actions that add undo steps close the "Adjust Last Operator"
panel (in cases when the new action cannot be adjusted).
Since [1] viewport locked actions can be undone (as they move objects).

The combination of these changes in functionality meant users who are
modeling in a camera view could easily move the view by accident which
cleared the panel to adjust the last operator.

While technically correct, this interferes with some users workflows.

Now viewport actions keep the existing UI open, although adjusting
the operator may undo the viewport adjustment as well.

Details:

An undo hint flag has been added so it's possible to control how the
interface treats undo steps without changing undo internals.

[0]: f68e50a263b8a970075c8fd540a985f2798e1d13
[1]: befe38fe1dfbbdac9ed9ef61853800426e5966c5